<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dr. Tick</string>
    <string name="action_settings">Settings</string><string name="Age">سن</string>
    <string name="Age_en">Age</string>
    <string name="Gender">جنسیت</string><string name="Gender_en">Gender</string><string name="Name">نام</string><string name="Name_en">Name</string><string name="Weight">وزن (کیلوگرم)</string><string name="Weigth_en">Weight</string><string name="Height">قد (سانتیمتر)</string><string name="Height_en">Height (cm)</string><string name="male">مرد</string><string name="male_en">Male</string><string name="female">زن</string><string name="female_en">Female</string><string name="save">ثبت</string><string name="save_en">Save</string><string name="title_activity_main">MainActivity</string><string name="title_activity_measure">اندازه گیری</string><string name="title_activity_measure_en">Measure</string><string name="title_activity_history">سابقه</string><string name="title_activity_history_en">History</string><string name="title_activity_help">راهنما</string><string name="title_activity_help_en">Help</string><string name="title_activity_profile">پروفایل</string><string name="title_activity_profile_en">Profile</string>    
    <string name="press_start">دکمه شروع را بفشارید.</string>
    <string name="press_start_en">Press Start</string><string name="HR">ضربان قلب</string>
    <string name="HR_en">HR</string><string name="BR">تنفس</string>
    <string name="BR_en">BR</string><string name="autostop">توقف خودکار پس از 10 ثانیه؟</string><string name="autostop_en">Autostop after 10 seconds measurement?</string>  
    <string name="zoom_out">نمایش همه</string>
    <string name="zoom_out_en">Zoom Out</string><string name="reset_history">پاک کردن سابقه</string><string name="reset_history_en">Reset History</string><string name="help_en">Please place the tip of your index finger on the camera lens. Just hold it gently and don\'t press too hard. Hold it steady for a few seconds. Then you will see your Heart Rate (HR) and Breathing Rate (BR) will be shown in a few seconds.</string>
    <string name="initializing">در حال شروع...</string><string name="initializing_en">Initializing...</string>    
    <string name="seconds_left"> ثانیه باقی مانده است...</string>
    <string name="seconds_left_en"> seconds left...</string>
    <string name="range_label">در دقیقه</string>
    <string name="range_label_en">Per Minute</string>
    <string name="OK">تایید</string>
    <string name="OK_en">OK</string>
    <string name="result">نتیجه</string>
    <string name="result_en">Result</string>
    <string name="HR_text">تعداد ضربان قلب: </string><string name="BR_text">تعداد تنفس:</string><string name="incomplete_profile">برای اطلاع دقیق از وضعیت سلامتتان، اطلاعات مربوط به صفحه پروفایل را تکمیل کنید.</string>
    <string name="incomplete_profile_en">To get more accurate feedback about your health status, please complete your information in profile tab.</string>
    <string name="share">نتیجه را با دوستانتان به اشتراک بگذراید!</string>
    <string name="share_en">Share the results with your friends!</string>
    <string name="health_status">وضعیت سلامتی</string>
    <string name="health_status_en">Your Health Status</string>
    <string name="according_to">با توجه به سن، جنسیت، قد، وزن، و میانگین اندازه گیری های قبلی برای شما، </string>
    <string name="heart_beat">ضربان قلب شما </string>
    <string name="breathing_rate">تنفس شما </string>
    <string name="physical_activity">و میزان فعالیت شما نسبت به وضعیت کلی جسمیتان </string>
    <string name="is">است. </string>
    <string name="breathing_advice">بهتر است عمیق تر نفس بکشید.</string>
    <string name="activity_advice1"></string>
    <string name="start_page">دکتر تیک | Dr. Tick</string>
    
    
    <string name="profile_updated">پروفایل به‌روز رسانی شد.</string>
    <string name="profile_updated_en">Profile updated.</string>
    
    
    <string name="help_h1">نحوه‌ی استفاده</string>
    <string name="help1">انگشت اشاره خود را روی لنز دوربین قرار دهید و برای چند ثانیه ثابت نگه دارید. دقت کنید که انگشتتان تمام لنز را بپوشاند. ضربان قلب و تنفستان پس از چند ثانیه محاسبه خواهد شد.</string>
    <string name="help_h2">ضربان قلب</string>
    <string name="help2">میزان ضربان قلب استراحت (Resting Heart Rate) معیار خوبی از سلامتی فرد است. منظور از حالت استراحت، در حالت معمول، بدون انجام فعالیت فیزیکی خاصی است. بهترین زمان برای اندازه گیری ضربان قلب استراحت، صبح‌ها پس از بیدار شدن از خواب است. به طور کلی ضربان قلب طبیعی مطابق این جدول محاسبه می‌شود:\n\nتولد تا ۱ ماه: ۱۴۰ تا ۱۶۰ تپش در دقیقه\n۱ تا ۳ سال: ۱۲۰ تا ۱۴۰ تپش در دقیقه\n۳ تا ۱۲ سال: ۱۰۰ تا ۱۲۰ تپش در دقیقه\nبالای ۱۲ سال: ۶۰ تا ۱۰۰ ضربان در دقیقه‌</string>
    <string name="help_h3">تنفس</string>
    <string name="help3">به طور کلی هرچه تنفس منظم‌تر و عمیق‌تر باشد، برای سلامتی مفیدتر است. تنفس طبیعی مطابق این جدول محاسبه می شود:\n\nتولد تا ۶ هفته: ۳۰ تا ۶۰ تنفس در دقیقه\n۶ هفته تا ۶ ماه: ۲۵ تا ۴۰ تنفس در دقیقه\n۶ ماه تا ۳ سال: ۲۰ تا ۳۰ تنفس در دقیقه\n۳ تا ۶ سال: ۱۸ تا ۲۵ تنفس در دقیقه\n۶ تا ۱۰ سال: ۱۵ تا ۲۰ تنفس در دقیقه\nبالای ۱۰ سال: ۱۲ تا ۱۵ تنفس در دقیقه</string>
    <string name="help_h4">نشانه‌ی خطر</string>
    <string name="help4">اگر شاهد افزایش قابل‌توجه ضربان قلب استراحتتان شدید، به پزشک مراجعه کنید. این مسئله می‌تواند نشان‌دهنده افزایش ریسک در ابتلا به بیماری‌های قلبی باشد. همچنین بسیار پایین بودن این مقدار می تواند نشانه‌ی بلوک قلبی یا اختلال در سیستم عصبی خودگردان باشد. اگر تعداد تنفستان بالاست، سعی کنید عمیقتر و آهسته تر نفس بکشید.</string>
    <string name="help_h5">فعالیت ورزشی</string>
    <string name="help5_1">متناسب با سن و جنس شما، حداکثر ضربان قلب مجاز در هنگام فعالیت برای قلبتان، به روش زیر قابل محاسبه است:\n\nبرای آقایان:</string>
    <string name="help5_2">HRmax = 203.7 / ( 1 + exp( 0.033 × (age − 104.3) ) )</string><string name="help5_3">برای خانم‌ها:</string><string name="help5_4">HRmax = 190.2 / ( 1 + exp( 0.0453 × (age − 107.5) ) )</string><string name="help5_5">در هنگام فعالیت های فیزیکی، بهتر است به این نکته توجه کنید که ضربان قلبتان چه میزان از حداکثر مقدار مجاز است. فعالیت بیش از ۹۰ درصد برای قلبتان توصیه نمی‌شود.\nگرم کردن: ۵۰ تا ۶۰ درصد\nسوزاندن چربی: ۶۰ تا ۷۰ درصد\nفعالیت هوازی: ۷۰ تا ۹۰ درصد</string><string name="help_h6">بیشتر بدانید</string><string name="help6_1">برای اطلاعات بیشتر در مورد اپلیکیشن می توانید به لینک زیر مراجعه کنید:</string><string name="help6_2">http://ce.sharif.edu/~ghandeharioun/Dr.Tick</string>
    <string name="help6_3">همچنین در مورد ضربان قلب و ریتم تنفس می‌توانید به منابع زیر مراجعه کنید:</string>
    <string name="help6_4">http://en.wikipedia.org/wiki/Heart_rate</string>
    <string name="help6_5">http://en.wikipedia.org/wiki/Respiratory_rate</string>
    <string name="measuring">...</string>
    <string name="per_minute">در دقیقه</string>
    
    
    
    
    
    
    
    

</resources>
