<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <View
        android:id="@+id/resultView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/theme2_light_violet"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
         />
    <LinearLayout 
        android:orientation="horizontal"
        android:background="@layout/round_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
    
    
    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="28sp"
        android:layout_marginTop="-45dp"
         
        />

    <TextView
        android:id="@+id/HRText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/HR_text"
        android:textSize="29sp"/>
    
    <TextView
        android:id="@+id/HRTextAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/HR_text"
        android:textSize="29sp"/>

    <TextView
        android:id="@+id/BRText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/BR_text"
        android:textSize="29sp"/>
    
    <ImageButton
        android:id="@+id/facebookButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="65dp"
        android:background="@drawable/facebook_button" />
    
    <ImageButton
        android:id="@+id/twitterButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="65dp"
        android:background="@drawable/twitter_button" />
    
    </LinearLayout>
    <View
        android:id="@+id/adviceView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/theme2_light_violet"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
         />
    
    <LinearLayout
        android:orientation="horizontal" 
        android:background="@layout/round_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    
<TextView
        android:id="@+id/advice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/health_status"
        android:textSize="28sp"
        android:layout_marginTop="-45dp"
        />

    <TextView
        android:id="@+id/according2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/according_to"
        android:textSize="29sp"/>
        <TextView
        android:id="@+id/heart_beat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/heart_beat"
        android:textSize="29sp"/>
        
            <TextView
        android:id="@+id/breathingRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/breathing_rate"
        android:textSize="29sp"/>
            
                <TextView
        android:id="@+id/physicalActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/physical_activity"
        android:textSize="29sp"/>
                
                    <TextView
        android:id="@+id/is"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/is"
        android:textSize="29sp"/>
                    </LinearLayout>
</LinearLayout>