<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:keepScreenOn="true"
    tools:context=".Measure" >

    <FrameLayout 
        android:id="@+id/ECG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">"
    <ImageView
        android:id="@+id/imageViewPaperTray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/paper_tray" />
    
    <ImageView
        android:id="@+id/ECGLine"
        android:layout_width="300dp"
        android:layout_height="84dp"
		android:tileMode="repeat"
		android:scaleType="fitStart"
		android:paddingLeft="0dp"
		android:paddingTop="0dp"
		android:layout_marginLeft="51dp"
		android:layout_marginTop="3dp"/>
    
    <ImageView
        android:id="@+id/imageViewNeedle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="matrix"
        android:paddingLeft="14dp"
        android:paddingTop="38dp"
        android:src="@drawable/needle" />

    </FrameLayout>
    
    <LinearLayout 
        android:id="@+id/ECGView"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="65dp"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:background="@color/cyan"
        >
        
    </LinearLayout>
    
<FrameLayout 
        android:id="@+id/Breathing"
        android:layout_below="@+id/ECG"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">"
    <ImageView
        android:id="@+id/imageViewPaperTray2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/paper_tray" />
    
    <ImageView
        android:id="@+id/BreathingLine"
        android:layout_width="300dp"
        android:layout_height="84dp"
		android:tileMode="repeat"
		android:scaleType="fitStart"
		android:paddingLeft="0dp"
		android:paddingTop="0dp"
		android:layout_marginLeft="51dp"
		android:layout_marginTop="3dp"
		android:src="@drawable/paper_all"/>
    
    <ImageView
        android:id="@+id/imageViewNeedle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="matrix"
        android:paddingLeft="14dp"
        android:paddingTop="38dp"
        android:src="@drawable/needle" />

    </FrameLayout>
        
    
        <LinearLayout 
        android:id="@+id/breathingView"
        android:orientation="horizontal"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="65dp"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:background="@color/cyan"
        >
        
    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewBeat"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:scaleType="matrix"
        android:layout_below="@+id/ECG" 
        android:layout_centerHorizontal="true"
        android:layout_marginTop="105dp"
        android:src="@drawable/beat" />
    

        <ImageView
        android:id="@+id/progressBarStill"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageViewBeat"
        android:layout_marginTop="10dp"
        android:src="@drawable/progress_still"
		/>
        
        
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageViewBeat"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
/>
        
        
             <TextView
        android:id="@+id/progressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:typeface="serif"
        android:text="@string/press_start" />

    
    <TextView
        android:id="@+id/TextViewHR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ECG"
        android:layout_alignRight="@+id/ECG"
        android:layout_marginTop="105dp"
        android:layout_marginRight="24dp"
        android:textSize="24sp"
        android:typeface="serif"
        android:text="@string/HR" />
    
     <TextView
        android:id="@+id/TextViewHRAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/TextViewHR"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/TextViewHR"
        android:layout_centerVertical="true"
        android:textSize="24sp"
        android:typeface="serif"
        android:text="" />

    <TextView
        android:id="@+id/TextViewBR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ECG"
        android:layout_alignLeft="@+id/ECG"
        android:layout_marginTop="105dp"
        android:layout_marginLeft="36dp"
        android:textSize="24sp"
        android:typeface="serif"
        android:text="@string/BR" />
    
    <TextView
        android:id="@+id/TextViewBRAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextViewBR"
        android:layout_alignRight="@+id/TextViewBR"
        android:layout_marginRight="15dp"
        android:layout_centerVertical="true"
        android:textSize="24sp"
        android:typeface="serif"
        android:text="" />
    

    <ImageButton
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewBeat"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="40dp"
        android:onClick="resetClicked"
        android:src="@drawable/reset" />
    
    <ImageButton
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewBeat"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/resetButton"
        android:onClick="startClicked"
        android:src="@drawable/start" />
    
    <ImageButton
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewBeat"
        android:layout_toRightOf="@+id/startButton"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="120dp"
        android:onClick="stopClicked"
        android:src="@drawable/stop" />
    
    

    <CheckBox
        android:id="@+id/autoStopCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startButton"
        android:layout_centerHorizontal="true"
        android:text="@string/autostop" />

</RelativeLayout>
